--- a/index.html
+++ b/index.html
@@ -10,27 +10,34 @@
 <body>
     <main>
         <form>
-            <h1>Kalorien rechner</h1>
-            <article>
-                <h2>Körpergröße</h2>
-                <input id="größe" name="größe" type="number" placeholder="z.B. 188cm">
-            </article>
-            <article>
-                <h2>Alter</h2>
-                <input id="alter" type="number" placeholder="z.B. 18">
-            </article>
-            <article>
-                <h2>Gewicht</h2>
-                <input id="gewicht" type="number" placeholder="z.B. 95kg">
-            </article>
-            <article>
-                <h2>Körperbau</h2>
-                <input id="weiblich" type="radio" name="geschlecht" checked>
-                <label for="weiblich">Weiblich</label>
-                <input id="männlich" type="radio" name="geschlecht">
-                <label for="männlich">Männlich</label>
-            </article>
-            <article>
+            <h1>Kalorienrechner</h1>
+            <section class="werte">
+                <article>
+                    <div>
+                    <h2>Körpergröße</h2>
+                    <input id="größe" name="größe" type="number" placeholder="z.B. 188cm">
+                    </div>
+                    <div>
+                    <h2>Alter</h2>
+                    <input id="alter" type="number" placeholder="z.B. 18">
+                    </div>
+                    <div>
+                    <h2>Gewicht</h2>
+                    <input id="gewicht" type="number" placeholder="z.B. 95kg">
+                    </div>
+                </article>
+
+                <article class="körperbau">
+                    <h2>Körperbau</h2>
+                    <label for="weiblich">Weiblich</label>
+                    <input id="weiblich" type="radio" name="geschlecht" checked>
+                    <label for="männlich">Männlich</label>
+                    <input id="männlich" type="radio" name="geschlecht">
+                </article>
+            </section>
+
+
+            <article class="aktiv">
                 <h2>Arbeits- und Freizeitaktivität</h2>
                 <select id="aktivität">
                     <option value="0.95">Schlafen</option>
@@ -44,21 +51,22 @@
             <input onclick="calculate(); return false" type="submit" class="btn" value="Submit">
             <table>
                 <tr>
-                    <th>Placeholder</th>
+                    <th></th>
                     <td>kcal</td>
                     <td>kJ</td>
                 </tr>
                 <tr>
-                    <th>Grundumsatz</th>
+                    <th>Grundumsatz:</th>
                     <td class="grundKcal"></td>
                     <td class="grundKj"></td>
                 </tr>
                 <tr>
-                    <th>Gesamtumsatz</th>
+                    <th>Gesamtumsatz:</th>
                     <td class="gesamtKcal"></td>
                     <td class="gesamtKj"></td>
                 </tr>
             </table>
+            <p>Das Ergebnis des Rechners sollten Sie als Orientierungswer ansehen, da es verschiedene Fehlermöglichkeiten gibt, wie abweichender Grundumsatz, falsche Zeiteinschätzung etc.</p>
         </form>
     </main>
 
