--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <td class="gesamtKj"></td>
                 </tr>
             </table>
-            <p>Das Ergebnis des Rechners sollten Sie als Orientierungswer ansehen, da es verschiedene Fehlermöglichkeiten gibt, wie abweichender Grundumsatz, falsche Zeiteinschätzung etc.</p>
+            <p>Das Ergebnis des Rechners sollten Sie als Orientierungswert ansehen, da es verschiedene Fehlermöglichkeiten gibt, wie abweichender Grundumsatz, falsche Zeiteinschätzung etc.</p>
         </form>
     </main>
 
